--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -3,6 +3,10 @@ HISTORY
 Main changes
 
 [horizontal]
+*2012/05/10*:: Add Shift with keys arrows and pages
+
+*2012/04/19*:: Add Limited_Pool
+
 *2012/03/30*:: Add tcpipe
 
 *2012/03/30*:: Ensure that exception Invalid_Pcre_Version is properly raised
