--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -4,6 +4,8 @@ Main changes
 
 [horizontal]
 
+*2012/11/05*:: Add function Move and Copy in afpx_rnb
+
 *2012/10/22*:: Add option -L (--list) to asubst V14.0
 
 *2012/10/03*:: Re-organize inputs/outputs of text
